# emaaddinmanager

./: README.md  next.config.ts  package.json
.github/workflows/: publish.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/db_manager/: Cargo.toml
src-tauri/db_manager/src/: main.rs
src-tauri/db_manager/src/db/: mod.rs  utils.rs
src-tauri/dll-cleaner/: Cargo.toml
src-tauri/dll-cleaner/src/: dll_checker.rs  main.rs
src-tauri/revit_check/: Cargo.toml
src-tauri/revit_check/src/: helpers.rs  lib.rs  main.rs  models.rs
src-tauri/src/: app_service_container.rs  app_updater.rs  constants.rs  lib.rs
src-tauri/src/models/: auto_serializing_value.rs  emit_metadata_model.rs  kv_store_value.rs  mod.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/addin_exporter/: mod.rs  service.rs  tauri_exports.rs
src-tauri/src/services/addin_exporter/models/: mod.rs  simplified_addin_info_model.rs
src-tauri/src/services/addin_updater/: mod.rs  service.rs  tauri_exports.rs  update_checker.rs
src-tauri/src/services/addin_updater/helpers/: addin_helpers.rs  file_helpers.rs  mod.rs
src-tauri/src/services/addin_updater/models/: mod.rs  update_notification_model.rs
src-tauri/src/services/addin_updater/update_checker/: mod.rs  notifications.rs  pending_updates.rs  types.rs
src-tauri/src/services/addins_registry/: mod.rs  service.rs  tauri_exports.rs
src-tauri/src/services/addins_registry/models/: addin_model.rs  addin_xml_model.rs  install_request_model.rs  mod.rs
src-tauri/src/services/addins_registry/services/: enums.rs  mod.rs
src-tauri/src/services/admin/: mod.rs  service.rs  tauri_exports.rs
src-tauri/src/services/admin/addin_exporter/: mod.rs  service.rs  tauri_exports.rs
src-tauri/src/services/app_save/: service.rs
src-tauri/src/services/config/: keys.rs  mod.rs
src-tauri/src/services/dev_resources/: mod.rs  tauri_exports.rs
src-tauri/src/services/local_addins/: mod.rs  service.rs  tauri_exports.rs
src-tauri/src/services/local_db/: mod.rs  service.rs
src-tauri/src/services/user_stats/: mod.rs  service.rs
src-tauri/src/utils/: mod.rs
(+207 files in other folders)
