[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.31", features = ["serialize"] }
log = "0.4"
tauri = { version = "2.6.0", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.41.1", features = ["full"] }
dirs = "5.0"
futures = "0.3.31"
sea-orm = { version = "1.1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
sea-schema = "0.16.0"
sqlx = { version = "0.8.2", features = ["sqlite"] }
uuid = { version = "1", features = ["v4"] }
print_err = { path = "./print_err" }
tauri-plugin-dialog = "2"
csv = "1.3"
chrono = "0.4"
revitcli = "1.0.0"
rayon = "1.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
