[package]
name = "db_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
futures = "0.3.31"
sea-orm = { version = "1.1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
sea-schema = "0.16.0"
sqlx = { version = "0.8.2", features = ["sqlite"] }
uuid = { version = "1", features = ["v4"] }
sea-orm-migration = "1.1.13"